# lucky

./: .gitignore  README.md
app/: .gitignore  README.md  data_structure.md  package.json
app/public/: index.html
app/src/: App.js  config.js  index.css
app/src/component/: create.js  demo.js  details.js  (+9 more)
approver/: .gitignore  README.md  config.js  index.js  package.json
approver/gene/: hello.json
approver/lib/: .gitignore  check.js  db.js  file.js  luckysig.json  private.json  seed.text  solana.js  solscan.js  tools.js
approver/system/: account.js  cache.js  gene.js  overview.js  signature.js
approver/test/: chain.test.js  db.test.js  quick.test.js
cache/: .gitignore  README.md  config.js  index.js  package.json
cache/lib/: db.js  output.js  solana.js  tools.js
cache/system/: autocache.js  block.js
home/: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json
home/docs/: hello.md
home/more/: todo.md
home/src/: config.js
luckysig/: Anchor.toml  deployment.md  env.md  keypair.json
luckysig/images/: token.json  token_check_uri.md
luckysig/programs/luckysig/: Cargo.toml
luckysig/programs/luckysig/src/: constants.rs  lib.rs
luckysig/programs/luckysig/src/approve/: approve.rs  mod.rs
luckysig/programs/luckysig/src/claim/: claim.rs  mod.rs  ticket.rs
luckysig/programs/luckysig/src/create/: create.rs
luckysig/programs/luckysig/src/gene/: enable.rs  gene.rs  mod.rs
luckysig/programs/luckysig/src/identity/: identity.rs  mod.rs
luckysig/programs/luckysig/src/init/: init.rs
luckysig/tests/: init_system.ts
(+22 files in other folders)
