[package]
name = "luckysig"
version = "0.1.1"
description = "Distribute token by lucky signature"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "luckysig"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = {version = "0.30.1", features = ["metadata"]}
bs58 = "0.5.1"
hex = "0.4.3"
serde = "1.0.217"
serde_json = "1.0.138"
sha2 = "0.10.8"
solana-program = "1.18.26"
